release 0.0.0
r1:engine fixes, translation updates (Russian)
r2:notifications (KDialog/notify-send) implemented
r3:new download method: QNetworkAcessManager instead of wget
r4:engine fixes, saving window geometry improved
r5:adding .desktop files to Desktop folder (see EXEPATH), opening CD/DVD ISO images improved. 
r6:engine fixes, VIDEO_MEMORY_SIZE added
r7:engine fixes, using INI format for control file, presets
r8:editor included
r9:autopackages included
r10:now engine in shared library. And autopackages removed.
r11:all prefix working in shared library, all packages merged
r12:RELASE RC1
r13:ebuilds added, debs added
r14:bioshock added, silent hill 3 added, RELEASE RC2
r15:CS:S added, GTA3,SA added.Using QSQLITE & QtSql to store installed apps
r16:Perfect World added
r17:RELEASE RC3
r18:wizardry, fallout 3, silent hunter 5 added
r19:using kdesu/gksu for mounting, add an option to force using fuseiso
r20:crysis added, winegame understands XDG_CONFIG_HOME env. variable